# ocaml_simple_chat

./: README.md  chat.opam  dune-project
lib/: dune  getopt.ml  getopt.mli  msg.ml  msg.mli  sock.ml  sock.mli
test/msg/: dune  test.ml
